--- a/index.html
+++ b/index.html
@@ -6,6 +6,38 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Hero section -->
+    <div>
+        <h1>Visit Melbourne/h1>
+        <h2>Enjoy culture, sport and dining in the world's 4th most liveable city*</h2>
+    </div>
+    <!-- Activities section -->
+    <div>
+        <h3>Top activities in Melbourne</h3>
+    </div>
+    <div>
+        <div>
+            <img src="" alt="">
+            <p></p>
+            <p></p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p></p>
+            <p></p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p></p>
+            <p></p>
+        </div>
+    </div>
+    <!-- Guide section -->
+    <div>
+        <h3></h3>
+        <p></p>
+        <h4></h4>
+        <img src="" alt="">
+    </div>
 </body>
 </html>
