Added images and div classes

--- a/index.html
+++ b/index.html
@@ -7,33 +7,33 @@
 </head>
 <body>
     <!-- Hero section -->
-    <div>
-        <h1>Visit Melbourne/h1>
-        <h2>Enjoy culture, sport and dining in the world's 4th most liveable city*</h2>
+    <div class="hero-section">
+        <h1>Visit Melbourne</h1>
+        <h2>Enjoy culture, shopping, fine dining and sports in the world's 4th most liveable city*</h2>
     </div>
     <!-- Activities section -->
-    <div>
+    <div class="activities-section">
         <h3>Top activities in Melbourne</h3>
     </div>
     <div>
         <div>
-            <img src="" alt="">
+            <img class="activities-img" src="" alt="">
             <p></p>
             <p></p>
         </div>
         <div>
-            <img src="" alt="">
+            <img class="activities-img" src="" alt="">
             <p></p>
             <p></p>
         </div>
         <div>
-            <img src="" alt="">
+            <img class="activities-img" src="" alt="">
             <p></p>
             <p></p>
         </div>
     </div>
     <!-- Guide section -->
-    <div>
+    <div class="guide-section">
         <h3></h3>
         <p></p>
         <h4></h4>
