Added css stlying to images

--- a/index.html
+++ b/index.html
@@ -3,35 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Visit Melbourne!</title>
 </head>
 <body>
     <!-- Hero section -->
-    <div class="hero-section">
-        <h1>Visit Melbourne</h1>
-        <h2>Enjoy culture, shopping, fine dining and sports in the world's 4th most liveable city*</h2>
+    <div id="hero-section">
+        <h1 class="hero-btn" id="hero-title">Visit Melbourne</h1>
+        <h2 class="hero-btn" id="hero-text">Enjoy culture, shopping, and sports in the world's 4th most liveable city*</h2>
     </div>
     <!-- Activities section -->
-    <div class="activities-section">
-        <h3>Top activities in Melbourne</h3>
-    </div>
-    <div>
-        <div>
-            <img class="activities-img" src="" alt="">
-            <p></p>
-            <p></p>
-        </div>
-        <div>
-            <img class="activities-img" src="" alt="">
-            <p></p>
-            <p></p>
-        </div>
-        <div>
-            <img class="activities-img" src="" alt="">
-            <p></p>
-            <p></p>
-        </div>
-    </div>
+    <div id="activities-section">
+        <h3 id="activities-title">Top three activities to do in Melbourne</h3>
+            <div id="activities-container">
+                    <div>
+                        <img class="activities-img" src="images/NGV.jpg" alt="">
+                        <p>Text here</p>
+                        <p>Text here</p>
+                    </div>
+                    <div>
+                        <img class="activities-img" src="images/Shopping.jpg" alt="">
+                        <p></p>
+                        <p></p>
+                    </div>
+                    <div>
+                        <img class="activities-img" src="images/MCG.jpg" alt="">
+                        <p></p>
+                        <p></p>
+                    </div>
+            </div>
+    </div>    
     <!-- Guide section -->
     <div class="guide-section">
         <h3></h3>
