Added html and css to activiy section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+
     <title>Visit Melbourne!</title>
 </head>
 <body>
@@ -15,21 +16,21 @@
     <!-- Activities section -->
     <div id="activities-section">
         <h3 id="activities-title">Top three activities to do in Melbourne</h3>
-            <div id="activities-container">
-                    <div>
+            <div id="activities-container-main">
+                    <div class="activities-container-sub">
                         <img class="activities-img" src="images/NGV.jpg" alt="">
-                        <p>Text here</p>
-                        <p>Text here</p>
+                        <p class="activity-title">Visit world famous museums and galleries</p>
+                        <p class="activity-text">From the iconic NGV through to The Hat Museum there is something for everyone to enjoy and broadedn their horizons</p>
                     </div>
-                    <div>
+                    <div class="activities-container-sub">
                         <img class="activities-img" src="images/Shopping.jpg" alt="">
-                        <p></p>
-                        <p></p>
+                        <p class="activity-title"></p>
+                        <p class="activity-text"></p>
                     </div>
-                    <div>
+                    <div class="activities-container-sub">
                         <img class="activities-img" src="images/MCG.jpg" alt="">
-                        <p></p>
-                        <p></p>
+                        <p class="activity-title"></p>
+                        <p class="activity-text"></p>
                     </div>
             </div>
     </div>    
