Finished html and css

--- a/index.html
+++ b/index.html
@@ -15,31 +15,35 @@
     </div>
     <!-- Activities section -->
     <div id="activities-section">
-        <h3 id="activities-title">Top three activities to do in Melbourne</h3>
-            <div id="activities-container-main">
-                    <div class="activities-container-sub">
+        <h2 id="activities-title">Top three activities to do in Melbourne</h2>
+            <div id="activities-container">
+                    <div class="activities-item">
                         <img class="activities-img" src="images/NGV.jpg" alt="">
                         <p class="activity-title">Visit world famous museums and galleries</p>
-                        <p class="activity-text">From the iconic NGV through to The Hat Museum there is something for everyone to enjoy and broadedn their horizons</p>
+                        <p class="activity-text">From the iconic NGV through to The Hat Museum there is something for everyone to enjoy.</p>
                     </div>
-                    <div class="activities-container-sub">
+                    <div class="activities-item">
                         <img class="activities-img" src="images/Shopping.jpg" alt="">
-                        <p class="activity-title"></p>
-                        <p class="activity-text"></p>
+                        <p class="activity-title">Shop till you drop!</p>
+                        <p class="activity-text">Enjoy world famous fashion events and shopping to match.</p>
                     </div>
-                    <div class="activities-container-sub">
+                    <div class="activities-item">
                         <img class="activities-img" src="images/MCG.jpg" alt="">
-                        <p class="activity-title"></p>
-                        <p class="activity-text"></p>
+                        <p class="activity-title">Aussie! Aussie! Aussie!</p>
+                        <p class="activity-text">Take in the thrills with the huge crowd at a sporting event at the G</p>
                     </div>
             </div>
     </div>    
     <!-- Guide section -->
-    <div class="guide-section">
-        <h3></h3>
-        <p></p>
-        <h4></h4>
-        <img src="" alt="">
+    <div id="guide-section-container">
+        <div class="guide-item">
+            <img src="images/street-art.jpg" id="guide-img" alt="">
+        </div>  
+        <div class="guide-item">
+            <h2>Your Guide</h2>
+            <p>"I have lived in Melbourne for over 10 years <br> and know where all the secret bars are."</p>
+            <h3>Josh Torkington</h3>
+        </div>
     </div>
 </body>
 </html>
